--- a/test.css
+++ b/test.css
@@ -2,7 +2,7 @@
 selectors). */
 body {
     margin: 25px;
-    background-color: rgb(240,240,240);
+    background-color: #31aab5;
     font-family: arial, sans-serif;
     font-size: 14px;
 }
